--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+</head>
+
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-<h2>The MineCraft Server loginpage</h2>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/loginpage">Login<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Map</a>
+        </li>
+      </ul>
 
-<p id="demo">Enter your account and password.</p>
+    </div>
+  </nav>
 
-<input type="text" id="account" />
-<input type="password" id="password" />
-<button type="button" onclick="loadDoc()">Submit</button>
+  <form>
+    <div class="form-group">
+      <label for="account">User Name</label>
+      <input type="text" class="form-control" id="account" aria-describedby="emailHelp" placeholder="Enter User name">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" placeholder="Password">
+    </div>
+    <button type="button" class="btn btn-primary" onclick="loadDoc()">Submit</button>
+  </form>
 
-<script>
-function loadDoc() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML = this.responseText;
-      window.location.href='/loginOK';
-    }else{
-      window.location.href='/loginpage';
+  <script>
+    function loadDoc() {
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function () {
+        if (this.readyState == 4 && this.status == 200) {
+          if (this.responseText == "OK") {
+            window.location.href = '/loginOK';
+          } else {
+            alert("Invalid username or password!")
+          }
+        }
+      };
+      xhttp.open("POST", "/login", true);
+      xhttp.send(`{"account":"${document.getElementById("account").value}", "password":"${document.getElementById("password").value}"}`);
     }
-  };
-  xhttp.open("POST", "/login", true);
-  xhttp.send(`{"account":"${document.getElementById("account").value}", "password":"${document.getElementById("password").value}"}`);
-  window.location.href='/loginOK';
-}
-</script>
+  </script>
 
 </body>
+
 </html>
