--- a/showmap.html
+++ b/showmap.html
@@ -5,13 +5,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <title>Welcome to 
-    Minecraft Server!</title>
+  <title>Hello, world!</title>
 </head>
 
 <body>
@@ -27,15 +24,19 @@
         <li class="nav-item active">
           <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/map">Map <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Map</a>
         </li>
       </ul>
-
     </div>
   </nav>
+  <h2>The MineCraft Server Map</h2>
 
-  <p id="demo">Welcome!</p>
+  <p id="demo">Dynmap.</p>
+
+  <iframe src="http://localhost:8123/" height="800" width="1800"></iframe>
+  <button type="button" onclick="loadDoc()">logout</button>
+
   <script>
     function loadDoc() {
       var xhttp = new XMLHttpRequest();
@@ -44,27 +45,12 @@
           document.getElementById("demo").innerHTML = this.responseText;
         }
       };
-
       xhttp.open("GET", "/logout", true);
       xhttp.send();
       window.location.href = '/logout';
     }
   </script>
 
-  <script>
-    function loadDyn() {
-      var xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function () {
-        if (this.readyState == 4 && this.status == 200) {
-          document.getElementById("demo").innerHTML = this.responseText;
-        }
-      };
-
-      xhttp.open("GET", "/map", true);
-      xhttp.send();
-      window.location.href = '/map';
-    }
-  </script>
 </body>
 
 </html>
